--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ allprojects {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
+    apply plugin: 'eclipse'
 
     repositories {
         mavenCentral()
