--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ subprojects {
 
     dependencies {
         compile group:'com.google.collections', name:'google-collections', version:'1.0'
+        compile group:'org.testng', name:'testng', version:'6.9.9'
         testCompile group:'org.testng', name:'testng', version:'6.9.9'
     }
 
