--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ subprojects {
     }
 
     dependencies {
-        //compile group:'com.google.collections', name:'google-collections', version:'1.0'
+        compile group:'com.google.collections', name:'google-collections', version:'1.0'
         compile group:'com.google.guava', name:'guava', version:'22.0'
         compile group:'org.testng', name:'testng', version:'6.9.9'
         testCompile group:'org.testng', name:'testng', version:'6.9.9'
