--- a/cci-java/build.gradle
+++ b/cci-java/build.gradle
@@ -2,6 +2,8 @@ dependencies {
     compile project(':common')
 
     compile group:'org.testng', name:'testng', version:'6.9.9'
+    compile group:'com.google.collections', name:'google-collections', version:'1.0'
+    compile group:'com.google.guava', name:'guava', version:'22.0'
     testCompile group:'org.testng', name:'testng', version:'6.9.9'
 
 }
