--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ repositories {
 }
 
 dependencies {
-    testCompile group:'org.testng', name:'testng', version:'6.9.9'
+    testImplementation group:'org.testng', name:'testng', version:'6.9.9'
 }
 
 test {
@@ -31,10 +31,10 @@ subprojects {
     }
 
     dependencies {
-        compile group:'com.google.collections', name:'google-collections', version:'1.0'
-        compile group:'com.google.guava', name:'guava', version:'22.0'
-        compile group:'org.testng', name:'testng', version:'6.9.9'
-        testCompile group:'org.testng', name:'testng', version:'6.9.9'
+        implementation group:'com.google.collections', name:'google-collections', version:'1.0'
+        implementation group:'com.google.guava', name:'guava', version:'22.0'
+        implementation group:'org.testng', name:'testng', version:'6.9.9'
+        testImplementation group:'org.testng', name:'testng', version:'6.9.9'
     }
 
     test {
